implement google maps use bottom sheet to display weather

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeatherOptimChallenge</string>
+    <string name="zipcode_prompt">Enter your ZipCode</string>
 </resources>
